UCSFD8-2020-issue-fix fix css/html for magazine topic styles spilling onto homepage

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -12733,13 +12733,6 @@ body.page-node-type-magazine-homepage,
   body.page-node-type-magazine-homepage .magazine-alumni.four-card-row,
   .magazine-topic-issue-page .magazine-alumni.four-card-row {
     margin-bottom: 0; }
-    body.page-node-type-magazine-homepage .magazine-alumni.four-card-row .card-row__body,
-    body.page-node-type-magazine-homepage .magazine-alumni.four-card-row .magazine-alumni__date,
-    body.page-node-type-magazine-homepage .magazine-alumni.four-card-row .card-row__image::after,
-    .magazine-topic-issue-page .magazine-alumni.four-card-row .card-row__body,
-    .magazine-topic-issue-page .magazine-alumni.four-card-row .magazine-alumni__date,
-    .magazine-topic-issue-page .magazine-alumni.four-card-row .card-row__image::after {
-      display: none; }
   body.page-node-type-magazine-homepage .magazine-alumni .card-row__image img,
   .magazine-topic-issue-page .magazine-alumni .card-row__image img {
     max-height: none; }
@@ -12990,6 +12983,7 @@ body.page-node-type-magazine-homepage,
   width: 100%; }
 
 .magazine-hub-inside {
+  clear: both;
   padding: 0 20px;
   margin-bottom: 40px;
   padding-bottom: 0; }
@@ -13092,6 +13086,7 @@ body.page-node-type-magazine-homepage,
     .magazine-hub-inside {
       padding: 0 0 80px 0;
       margin: 0;
+      margin-top: 40px;
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       grid-gap: 5%;
@@ -13295,9 +13290,6 @@ body.page-node-type-magazine-homepage,
 .magazine-hub-inside__inside .news-card__link {
   color: #121a31; }
 
-.magazine-hub-inside__inside .article-header__byline {
-  display: none; }
-
 .magazine-hub-inside__inside .campus-news-card {
   margin: 0;
   padding-bottom: 0;
@@ -13450,6 +13442,11 @@ body.page-node-type-magazine-homepage,
 
 .footer-ctas-wrapper {
   margin-top: -2rem; }
+
+.magazine-topic-page .magazine-alumni.four-card-row .card-row__body,
+.magazine-topic-page .magazine-alumni.four-card-row .magazine-alumni__date,
+.magazine-topic-page .magazine-alumni.four-card-row .card-row__image::after {
+  display: none; }
 
 .remove-top-space {
   padding-top: 0 !important; }
