--- a/docroot/themes/custom/ucsf/scss/node/_node-magazine-homepage.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-magazine-homepage.scss
@@ -253,12 +253,6 @@ body.page-node-type-magazine-homepage,
 
     &.four-card-row {
       margin-bottom: 0;
-
-      .card-row__body,
-      .magazine-alumni__date,
-      .card-row__image::after {
-        display: none;
-      }
     }
 
     .card-row__image img {
@@ -500,6 +494,7 @@ body.page-node-type-magazine-homepage,
 
 .magazine-hub-inside {
   @include clearfix;
+  clear: both;
   padding: 0 20px;
   margin-bottom: $space-five;
   padding-bottom: 0;
@@ -624,6 +619,7 @@ body.page-node-type-magazine-homepage,
   @include breakpoint($new-large) {
     padding: 0 0 $space-ten 0;
     margin: 0;
+    margin-top: $space-five;
 
     @include grid-two;
 
@@ -867,10 +863,6 @@ body.page-node-type-magazine-homepage,
     color: $c-dark-navy;
   }
 
-  .article-header__byline {
-    display: none;
-  }
-
   .campus-news-card {
     margin: 0;
     padding-bottom: 0;
@@ -1012,4 +1004,17 @@ body.page-node-type-magazine-homepage,
 
 .footer-ctas-wrapper {
   margin-top: -2rem;
+}
+
+
+// overrides for the magazine topic page.
+.magazine-topic-page {
+
+  .magazine-alumni.four-card-row {
+    .card-row__body,
+    .magazine-alumni__date,
+    .card-row__image::after {
+      display: none;
+    }
+  }
 }
